<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="presenter"
            type="com.shakdwipeea.tuesday.home.settings.SettingsPresenter" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                  android:layout_marginTop="@dimen/app_bar_height"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  tools:context="com.shakdwipeea.tuesday.home.settings.SettingsFragment">

        <include
            android:id="@+id/contact_item"
            layout="@layout/contact_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{presenter::logOut}"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{presenter::viewPeopleHavingContact}"
            android:padding="10dp"
            android:text="@string/having_contact"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sync_label"
                android:textSize="20sp"
                />

            <Switch
                android:id="@+id/sync_contact_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:gravity="right|center_vertical|end" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

    </LinearLayout>
</layout>