<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        >

        <EditText
            android:id="@+id/search"
            android:hint="@string/search_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:elevation="4dp"
            android:background="@drawable/search_background"
            android:padding="8dp"
            android:fadingEdge="horizontal"
            android:selectAllOnFocus="true"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tuesid_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesid_label"/>

                <TextView
                    android:id="@+id/tuesid"
                    tools:text="ab24d1"
                    android:textAllCaps="true"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/contact_list"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>


        <TextView
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_contacts"/>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/phone_contact_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/phone_contact_list"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</layout>

